# RotationOptimization

./: .gitignore  CMakeLists.txt  README.md  rotation_optimization.cc  rotation_optimization.hh  rotation_optimization.inl  unit_tests.cc
cmake/: Warnings.cmake  target_link_libraries_system.cmake
doc/: OptimizingRotations.bib  OptimizingRotations.tex
